# FLStudioRichPresence

./: .gitignore  CMakeLists.txt
include/: fl_studio_types.h
src/: config.cpp  config.h  discord_client.cpp  discord_client.h  fl_studio_detector.cpp  fl_studio_detector.h  main.cpp  process_detector.cpp  process_detector.h
